--- a/navbar.css
+++ b/navbar.css
@@ -399,6 +399,8 @@ footer{
     border-radius: 40px;
 }
 .footer-page{
+    width: 15%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -414,6 +416,8 @@ footer{
     word-wrap: break-word
 }
 .footer-navs{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     list-style: none;
@@ -430,6 +434,8 @@ footer{
     word-wrap: break-word
 }
 .footer-address{
+    width: 15%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -454,6 +460,8 @@ footer{
     word-wrap: break-word
 }
 .footer-social{
+
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -482,6 +490,8 @@ footer{
     font-size: 33px;
 }
 .footer-contact{
+ 
+    height: 100%;
     margin-top: 30px;
 }
 .footer-contact-head{
@@ -503,7 +513,7 @@ footer{
     word-wrap: break-word
 }
 
-@media only screen and (min-width:1200px) and (max-width:1400px) {
+/* @media only screen and (min-width:1200px) and (max-width:1400px) {
     .container {
         min-width: 1140px;
         width: 100%;
@@ -570,4 +580,4 @@ footer{
         line-height: 0px; 
         letter-spacing: 1.2px;
     }
-}
+} */
