--- a/products.css
+++ b/products.css
@@ -71,9 +71,22 @@ header{
     line-height: 0px; 
     letter-spacing: 1.2px;
 }
-
-
-
+.allproducts{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.allproducts-head{
+    width: 100%;
+    height: 100px;
+    border-bottom: 2px #FF00CD;
+    color: black;
+    font-size: 45px;
+    font-family: Fira Sans;
+    font-weight: 400;
+    line-height: 45px;
+    word-wrap: break-word
+}
 
 
 
