--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ header{
     flex-direction: row;
     align-items: center;
     width: 100%;
+    height: 100%;
     justify-content: space-between;
     gap: 10px;
     
@@ -36,9 +37,11 @@ header{
     width: 20%;
     align-items: center;
     display: flex;
+    height: 100%;
 }
 .navbar-items{
     width: 80%;
+    width: 100%;
 }
 .nav-items{
     display: flex;
