--- a/products.css
+++ b/products.css
@@ -11,7 +11,6 @@ header{
     display: flex;
     flex-direction: row;
     background-color: #FF00CD;
-    position: fixed;
     z-index: 99999;
     justify-content: center;
 }
@@ -19,9 +18,6 @@ header{
     max-width: 1320px;
     width: 100%;
     margin: auto;
-    overflow: hidden;
-
-
 }
 .navbar{
     display: flex;
@@ -73,15 +69,46 @@ header{
     line-height: 0px; 
     letter-spacing: 1.2px;
 }
-.allproducts{
+.products-menu{
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 50px;
 }
-.allproducts-head{
+.product-head{
     width: 100%;
     height: 100px;
-    border-bottom: 2px #FF00CD;
+    border-bottom: 3px solid  #FF00CD;
+    display: flex;
+    align-items: center;
+}
+.product-head-text{
+    width: 100%;
+    color: black;
+    font-size: 45px;
+    font-family: Fira Sans;
+    font-weight: 400;
+    line-height: 45px;
+    word-wrap: break-word;
+    text-align: center;
+}
+.product-groups{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.cavrolit-group{
+    width: 100%;
+    height: 900px;
+    border-bottom: 3px solid  #FF00CD;
+
+}
+.cav-group-head{
+    text-align: center;
+    width: 100%;
+    height: 70px;
     color: black;
     font-size: 45px;
     font-family: Fira Sans;
@@ -89,11 +116,243 @@ header{
     line-height: 45px;
     word-wrap: break-word
 }
+.cavrolite-imgs{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 30px
+}
+.cavrolite-imgs div{
+    width: 26%;
+    height: 270px;
+    background-color: #D9D9D9;
+    border-radius: 40px;
+    margin-top: 50px;
+}
 
 
 
+.suni-qazon-group{
+    width: 100%;
+    height: 900px;
+    border-bottom: 3px solid  #FF00CD;
+
+}
+.suni-qazon-group-head{
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 30px;
+    align-items: center;
+    color: black;
+    font-size: 45px;
+    font-family: Fira Sans;
+    font-weight: 400;
+    line-height: 45px;
+    word-wrap: break-word
+}
+.suni-qazon-imgs{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 30px
+}
+.suni-qazon-imgs div{
+    width: 26%;
+    height: 270px;
+    background-color: #D9D9D9;
+    border-radius: 40px;
+    margin-top: 50px;
+}
+
+.linoleum-group{
+    width: 100%;
+    height: 900px;
+    border-bottom: 3px solid  #FF00CD;
+
+}
+.lin-group-head{
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 30px;
+    align-items: center;
+    color: black;
+    font-size: 45px;
+    font-family: Fira Sans;
+    font-weight: 400;
+    line-height: 45px;
+    word-wrap: break-word
+}
+.lin-imgs{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 30px
+}
+.lin-imgs div{
+    width: 26%;
+    height: 270px;
+    background-color: #D9D9D9;
+    border-radius: 40px;
+    margin-top: 50px;
+}
+.rezin-paspas-group{
+    width: 100%;
+    height: 500px;
+    border-bottom: 3px solid  #FF00CD;
+
+}
+.rp-group-head{
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 30px;
+    align-items: center;
+    color: black;
+    font-size: 45px;
+    font-family: Fira Sans;
+    font-weight: 400;
+    line-height: 45px;
+    word-wrap: break-word
+}
+.rp-imgs{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 20px
+}
+.rp-imgs div{
+    width: 26%;
+    height: 270px;
+    background-color: #D9D9D9;
+    border-radius: 40px;
+    margin-top: 50px;
+}
 
 
+.rezin-doseme-group{
+    width: 100%;
+    height: 500px;
+    border-bottom: 3px solid  #FF00CD;
+
+}
+.rd-group-head{
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 30px;
+    align-items: center;
+    color: black;
+    font-size: 45px;
+    font-family: Fira Sans;
+    font-weight: 400;
+    line-height: 45px;
+    word-wrap: break-word
+}
+.rd-imgs{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 20px
+}
+.rd-imgs div{
+    width: 26%;
+    height: 270px;
+    background-color: #D9D9D9;
+    border-radius: 40px;
+    margin-top: 50px;
+}
+.tatami-group{
+    width: 100%;
+    height: 500px;
+
+}
+.tt-group-head{
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin-top: 30px;
+    align-items: center;
+    color: black;
+    font-size: 45px;
+    font-family: Fira Sans;
+    font-weight: 400;
+    line-height: 45px;
+    word-wrap: break-word
+}
+.tt-imgs{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 20px
+}
+.tt-imgs div{
+    width: 26%;
+    height: 270px;
+    background-color: #D9D9D9;
+    border-radius: 40px;
+    margin-top: 50px;
+}
+
+.fa-facebook {
+    color: blue;
+    transition: 1s all;
+}
+.fa-facebook:hover{
+    font-size: 62px;
+}
+
+.fa-instagram {
+    color: red;
+    transition: 1s all;
+}
+
+.fa-instagram:hover{
+
+    font-size: 62px;
+}
+.fa-youtube {
+    color: red;
+    transition: 1s all;
+}
+.fa-youtube:hover{
+
+    font-size: 62px;
+}
+.fa-tiktok{
+    transition: 1s all;
+}
+.fa-tiktok:hover{
+
+    font-size: 62px;
+}
+.fa-whatsapp {
+    color: rgb(107, 221, 107);
+    transition: 1s all;
+}
+.fa-whatsapp:hover{
+
+    font-size: 62px;
+}
 
 
 
