--- a/products.css
+++ b/products.css
@@ -13,6 +13,7 @@ header{
     background-color: #FF00CD;
     z-index: 99999;
     justify-content: center;
+    position: fixed;
 }
 .container{
     max-width: 1320px;
@@ -73,7 +74,6 @@ header{
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
 }
 .product-head{
     width: 100%;
@@ -81,6 +81,7 @@ header{
     border-bottom: 3px solid  #FF00CD;
     display: flex;
     align-items: center;
+    margin-top: 30px;
 }
 .product-head-text{
     width: 100%;
